# n-body-simulator

./: CMakeLists.txt  readme.md
.devcontainer/: Dockerfile  devcontainer.json
app/: n_body_sim.cc  solar_system.cc  three_body.cc
doc/: mysystem.puml  system.puml
grpc/: CMakeLists.txt  publisher.cc  publisher.hh
include/: Body.hh  BodySystem.hh  BodySystemPublisher.hh  SystemTracer.hh
include/factory/: BodySystemFactory.hh  BodySystemPublisherFactory.hh
include/interfaces/: IBodySystem.hh  IBodySystemPublisher.hh
src/: Body.cc  BodySystem.cc  BodySystemPublisher.cc  SystemTracer.cc  main.cc
src/factory/: BodySystemFactory.cc  BodySystemPublisherFactory.cc
systems_json/: couples.json  five_bodies.json  lines.json  periodic.json  square.json  system.json  system0.json  system1.json  triangle.json
test/: CMakeLists.txt  test.cc
